Update total amount and email

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div style="display: flex; flex-direction: row">
                     <div id=bar-inner class=bar-part></div><div class=bar-part>$5,000</div>
                 </div>
-            </div>$32,000
+            </div>$35,000
         </div>
     </div>
 
@@ -104,7 +104,7 @@
         <img src="cute1.gif"> Prizes!! <img src="cute2.gif">
     </h2>
 
-    </p><p>Donate to the fundraiser to claim a prize! You can <a href="https://secure.lawpay.com/pages/msorich/trust?reference=Rikki%20Hinz">donate directly via the lawyer's website</a>,<b> and please screenshot your donation for proof!</b> If you have already donated another way or have any questions, email us at xxxx.
+    </p><p>Donate to the fundraiser to claim a prize! You can <a href="https://secure.lawpay.com/pages/msorich/trust?reference=Rikki%20Hinz">donate directly via the lawyer's website</a>,<b> and please screenshot your donation for proof!</b> If you have already donated another way or have any questions, email us at help@attach.addy.io.
     </p>
     <div class="reward box">
         <h3>$100: A 2023 calendar with beautiful landscape photos from Cherlyn</h3>
