some reward details

--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
         <div class=reward-content>
             <img src="./imgs/nastassia2.png">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$100+Nastassia+stickers"><img src="./tball.gif">claim reward</a>
-            <span id="$100 Nastassia stickers"></span>
+            <p>Pick any 5 stickers from <a href= "https://toadandchameleon.storenvy.com">Nastassia's collection,</a> while supplies last. There are some secret unlisted options as well!</p>
+		<span id="$100 Nastassia stickers"></span>
         </div>
     </div>
     <div class="reward box">
@@ -172,7 +173,7 @@
         <div class=reward-content>
             <img src="./imgs/elizabeth.png">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$300+Elizabeth+haircut"><img src="./tball.gif">claim reward</a>
-            <p><a href="https://www.instagram.com/tuftlove/">Haircut photos!</a></p>
+            <p>You can see many examples of Elizabeth's fabulous work <a href="https://www.instagram.com/tuftlove/">here!</a></p>
             <span id="$300 Elizabeth haircut"></span>
         </div>
     </div>
@@ -190,7 +191,8 @@
         <div class=reward-content>
             <img src="./imgs/alex.jpg">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$500+Alex+guac"><img src="./tball.gif">claim reward</a>
-            <span id="$500 Alex guac"></span>
+            <p>IYKYK and IYDK Alex, it's still pretty great guac</p>
+		<span id="$500 Alex guac"></span>
         </div>
     </div>
     <div class="reward box">
