--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
     <p><img src="star.gif"><a href="https://secure.lawpay.com/pages/msorich/trust?reference=Rikki%20Hinz"><img src="clickhere.gif"></a></p>
 
     <h2 class="box comic">
-        <img src="cute1.gif"> Prizes!! <img src="cute2.gif">
+        <img src="cute1.gif"> Gifts!! <img src="cute2.gif">
     </h2>
 
-    </p><p>Donate to the fundraiser to claim a prize! You can <a href="https://secure.lawpay.com/pages/msorich/trust?reference=Rikki%20Hinz">donate directly via the lawyer's website</a>,<b> and please screenshot your donation for proof!</b> If you have already donated another way or have any questions, email us at help@attach.addy.io.
+    </p><p>Donate <a href="https://secure.lawpay.com/pages/msorich/trust?reference=Rikki%20Hinz">HERE</a> to claim a gift! 100% of your donation goes directly into the billing account for legal fees. <b>Please screenshot your donation for proof!</b> If you have any questions, email us at help@attach.addy.io.
     </p>
     <div class="reward box">
         <h3>$100: A 2024 calendar with beautiful landscape photos from Cherlyn</h3>
