--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <span id="$7000 Nastassia car painting"></span>
         </div>
     </div>
-    <p><img src="star.gif"><a href="https://secure.lawpay.com/pages/msorich/trust?reference=Rikki%20Hinz"><img class="donatecute" src="click_here_green.gif"></a></p>
+    <p><img src="star.gif"><a href="https://secure.lawpay.com/pages/msorich/trust?reference=Rikki%20Hinz"><img class="click_here_green" src="click_here_green.gif"></a></p>
     <div class="reward box">
         <h3>$25,000: Rikki will tattoo your name on her ass</h3>
         <div class=reward-content>
