add cassidy rewards, update total

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div style="display: flex; flex-direction: row">
             <div id=bar-outer class=bar-part>
                 <div style="display: flex; flex-direction: row">
-                    <div id=bar-inner class=bar-part></div><div class=bar-part>$5,000</div>
+                    <div id=bar-inner class=bar-part></div><div class=bar-part>$5,200</div>
                 </div>
             </div>$35,000
         </div>
@@ -124,11 +124,38 @@
         </div>
     </div>
     <div class="reward box">
+        <h3>$100: Cinnamon rolls from Cassidy </h3>
+        <div class=reward-content>
+            <img src="./imgs/cassidy1.jpeg">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$100+Cassidy+cinnamon+rolls"><img src="./tball.gif">claim reward</a>
+            <p>Homemade sourdough cinnamon rolls, delivered to your (Seattle) home</p>
+            <span id="$100 Cassidy cinnamon rolls"></span>
+        </div>
+    </div>
+    <div class="reward box">
         <h3>$200: A 2" knit pig (color of your choice) from Nastassia's mom</h3>
         <div class=reward-content>
             <img src="./imgs/sandy.png">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Nastassia's+mom's+knit+pig"><img src="./tball.gif">claim reward</a>
             <span id="$200 Nastassia's mom's knit pig"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$200: Fresh produce from Cassidy's garden</h3>
+        <div class=reward-content>
+            <img src="./imgs/cassidy2.jpeg">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Cassidy+garden+set"><img src="./tball.gif">claim reward</a>
+            <p>Delivered to your (Seattle) home</p>
+            <span id="$200 Cassidy garden set"></span>
+        </div>
+    </div>
+    <div class="reward box">
+        <h3>$200: A watercolor bird painting from Cassidy</h3>
+        <div class=reward-content>
+            <img src="./imgs/cassidy3.jpeg">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Cassidy+bird+painting"><img src="./tball.gif">claim reward</a>
+            <p>A painting of a bird of YOUR choice, delivered to your (Seattle) home</p>
+            <span id="$200 Cassidy bird painting"></span>
         </div>
     </div>
     <div class="reward box">
