--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
             });
 	});
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q6Y8073105"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-Q6Y8073105');
+    </script>
 </head>
 <body id=container>
     <h1 class="box comic">
