--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
         .box {
             border: 4px ridge gray;
-            padding: 2px;
+            padding: 10px;
         }
         .comic {
             font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
@@ -54,9 +54,29 @@
         .click-here-green {
             height: 80px;
         }
+        .bold {
+            font-weight: bold;
+            color: #7C00FE
+        }
+        #story {
+            margin-bottom: 20px;
+        }
+        #expand {
+            margin: 0 auto;
+        }
+        #below-fold {
+            display: none;
+        }
     </style>
     <!--<script src="https://unpkg.com/cursor-effects@latest/dist/browser.js"></script>-->
     <script>
+	window.addEventListener("load", async (event) => {
+            document.getElementById("expand").addEventListener("click", () => {
+                document.getElementById("below-fold").style.display = "block";
+                document.getElementById("expand").style.display = "none";
+            });
+        })
+
 	window.addEventListener("load", async (event) => {
             //new cursoreffects.springyEmojiCursor({ emoji: "💞" });
             new cursoreffects.fairyDustCursor({
@@ -98,10 +118,12 @@
     </script>
     <!-- End Matomo Code -->
 </head>
+
 <body id=container>
     <h1 class="box comic">
         ~*We Keep Us Safe: Keep lil A out of foster care!*~
     </h1>
+
     <div>
         Progress
         <div style="display: flex; flex-direction: row">
@@ -115,12 +137,62 @@
 
     <p><img src="star.gif"><a href="https://secure.lawpay.com/pages/msorich/trust?reference=Rikki%20Hinz"><img src="donatesmall1.gif"></a></p>
 
+    <div id=story class=box>
+        <div id=above-fold>
+        <p>Hi, I&rsquo;m Rikki, auntie to lil A, and I need your help in order to give my seven-year-old niece safety and stability in my loving care.</p>
+
+<p>On March 1st of this year, my sister requested that I pick up lil A because she was unable to safely care for her child. Initially I hoped my sister would be able to care for lil A within the year, but so far my sister has not been healthy enough to do so. After I picked lil A up, lil A&rsquo;s grandma texted me a picture of a fentanyl pill she found on the stairs leading up to lil A’s bedroom. I hate to think of what could have happened if I had not picked up lil A that day.</p>
+
+<p>In my sister&rsquo;s care I believe that lil A regularly witnessed domestic violence and experienced neglect and emotional abuse. <span class="bold">I believe that if lil A does not stay with me, she will end up in the foster care system. Now, her home life with me is healthy, loving, nurturing, and stable.</span></p>
+
+<p>I have exhausted my immediate network with legal fees for a minor guardianship case that has cost ~$25k to date, and the trial hasn&rsquo;t even started. I need to cover a $25k deposit for the trial plus ~$10k in anticipated legal fees prior to the trial.</p>
+
+<p>I have been dedicated to supporting the well-being of children and families through my career in infant mental health therapy. I&rsquo;ve empowered families in their healing journeys, and I’ve endeavored on my own healing journey to break the cycles of trauma passed down in my family.</p>
+
+<p>Will you help me break these same traumatic generational cycles for my niece?</p>
+
+<p class="bold"><a href=""https://secure.lawpay.com/pages/msorich/trust?reference=Rikki%20Hinz"">Click here to contribute directly to the litigation costs of the minor guardianship case.</a> 100% of your donation will go to my billing account with the lawyer. Any donations that exceed the costs of litigation will be used to provide care for lil A.</p>
+        </div>
+
+        <button id="expand">Read more</button>
+
+        <div id=below-fold>
+<h2>Why is it so expensive?</h2>
+<p>My lawyer bills up to $435 an hour.</p>
+<ul>
+    <li>$42 covers the cost of one email</li>
+    <li>$126 covers the cost of a short 18-minute meeting</li>
+    <li>$875 covers the cost of preparing documents for one hearing</li>
+</ul>
+<p>I contacted several lawyers and this was the only one who had capacity or the specialty necessary to take the case. Much of these costs have been from me having to defend myself against outlandish and unfounded claims. Many of you are shocked that I don&rsquo;t get a free or low cost lawyer for this case. Sames babes, sames.</p>
+
+<p>Having worked in this field for some time I am well versed in available resources and scoured resources for low cost or no cost legal representation and found that I did not qualify for those incredibly rare resources. For example, for one resource I missed the salary eligibility cutoff by just $3k.</p>
+
+<p>I am a solo caregiver, now working two jobs (50-60 hrs a week) in order to provide the best life I can for lil A.</p>
+
+<h2>What&rsquo;s up with this court case?</h2>
+<p>Because mine and other family members&rsquo; hope is to stop the cycles of trauma for lil A, we wanted to keep her out of the child welfare system. Having worked with many families involved in the child welfare system, and having already had a nephew in the child welfare system, I was keenly aware of the additional trauma that the system can unfortunately cause for kids and families. This is why I petitioned King County Superior Court for guardianship of lil A prior to any CPS involvement.</p>
+
+<p>After I became lil A&rsquo;s emergency guardian and obtained her educational and medical records, I learned that she missed 51 days of school at day 98 in the school year, and had not been to a wellness child checkup in over 2 years, despite having repeated emergency room visits, and a hospitalization without follow up care in the last year. She came into my care with a baby tooth that had a missing filling that had fallen out and not been repaired, and shoes that were 2 sizes too small for her. As a mandated reporter in the state of WA I was required to call CPS and inform them of these facts. CPS did an investigation and determined that because Ariel was safe and healthy at the present time in my care, they could close the case for the time being.</p>
+
+<p>Lil A was placed in my care in March of this year after I filed a petition for an immediate emergency guardianship. The ongoing minor guardianship case open with King County Superior court is the result of my petitioning to be lil A&rsquo;s longer term guardian because I have serious concerns about the likelihood that my sister will be well enough to properly care for lil A any time soon.</p>
+
+<p>My sister and I were initially working together as a unified team, but unfortunately she succumbed to the pressure of generational traumas and reverted to repeating old cycles. I am hoping for the best for her healing journey, but at a bit more distance now as I had to get a domestic violence protection order to protect myself and lil A from further harm. <span class="bold">If, and only if, my sister is healthy enough to raise lil A again at some point in the future, I would support that transition because I know reunification can be healing for kids and parents.</span> However, I currently have grave concerns and doubts about that potential in the near future.</p>
+
+<p>I remain steadfast in protecting lil A from experiencing further trauma, and will do everything I can to promote healing for my precious niece. She is only 7 years old and still has a chance to have a healthy childhood, unlike myself and so many others in my family. She now goes to school regularly, receives appropriate medical and dental care, and receives specialized mental health services so that she can begin her healing journey early on in life. She now has a loving community and friendships with children her own age—a whole social life she never had before.</p>
+
+<h2>Thank you!</h2>
+<p>I am in awe of how much love and support lil A and I have received during this difficult time from friends and loved ones.I would not be able to help end the cycles of trauma for lil A if it wasn&rsquo;t for all of you!</p>
+        </div>
+    </div>
+
     <h2 class="box comic">
         <img src="cute1.gif"> Gifts!! <img src="cute2.gif">
     </h2>
 
-    </p><p>Donate <a href="https://secure.lawpay.com/pages/msorich/trust?reference=Rikki%20Hinz">HERE</a> to claim a gift! 100% of your donation goes directly into the billing account for legal fees. <b>Please screenshot your donation for proof!</b> If you have any questions, email us at help@attach.addy.io.
+    </p><p>Donate <a href="https://secure.lawpay.com/pages/msorich/trust?reference=Rikki%20Hinz">HERE</a> to claim a gift! 100% of your donation goes directly into the billing account for legal fees. <b>Please screenshot your donation for proof!</b> If you have any questions, email us at <a href="mailto:helplila@attach.addy.io">helplila@attach.addy.io</a>.
     </p>
+
     <div class="reward box">
         <h3>$100: A 2024 calendar with beautiful landscape photos from Cherlyn</h3>
         <div class=reward-content>
