added 3 new rewards

--- a/index.html
+++ b/index.html
@@ -139,6 +139,14 @@
         </div>
     </div>
     <div class="reward box">
+        <h3>$100: Lemon bars from Jackie </h3>
+        <div class=reward-content>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$100+Jackie+lemon+bars"><img src="./tball.gif">claim reward</a>
+            <p>Delivered to your home in King or Snohomish county</p>
+            <span id="$100 Jackie lemon bars"></span>
+        </div>
+    </div>
+    <div class="reward box">
         <h3>$100: Cinnamon rolls from Cassidy </h3>
         <div class=reward-content>
             <img src="./imgs/cassidy1.jpeg">
@@ -238,6 +246,15 @@
         </div>
     </div>
     <div class="reward box">
+        <h3>$500: A day climbing with Jackie</h3>
+        <div class=reward-content>
+            <img src="./imgs/jackie1.jpg">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$500+Jackie+climbing"><img src="./tball.gif">claim reward</a>
+            <p><a href="https://www.instagram.com/jackie_be_/">Jackie</a> will take you on an entry-level sport or trad climbing session at the Exits- 6hrs</p>
+		<span id="$500 Jackie Climbing"></span>
+        </div>
+    </div>
+    <div class="reward box">
         <h3>$500: Philip will make you a deep dish pizza</h3>
         <div class=reward-content>
             <img src="./imgs/philip.jpg">
@@ -256,6 +273,15 @@
         </div>
     </div>
     <p><img src="star.gif"><a href="https://secure.lawpay.com/pages/msorich/trust?reference=Rikki%20Hinz"><img src="clickhere.gif"></a></p>
+    <div class="reward box">
+        <h3>$750: Mortgage or real estate transaction consultation from Jackie</h3>
+        <div class=reward-content>
+            <img src="./imgs/jackie2.jpg">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$750+Jackie+consulting"><img src="./tball.gif">claim reward</a>
+            <p>20 years experience and currently working on master’s degree in real estate - 6 hours, via email, phone call, virtual meeting</p>
+            <span id="$750 Jackie consulting"></span>
+        </div>
+    </div>
     <div class="reward box">
         <h3>$750: One of Marla's paintings</h3>
         <div class=reward-content>
