Update cherlyn link

--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
         <div class=reward-content>
             <img src="./imgs/cherlyn.jpg">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$300+Cherlyn+print"><img src="./tball.gif">claim reward</a>
-            <p>11x14" print in 16x20" mat, <a href="https://www.instagram.com/cherlynelizaphoto/">Cherlyn's work for examples</a></p>
-            <span id="$300 Cherlyn print"></span>
+            <p>11x14" print in 16x20" mat, <a href="https://cherlynelizaphoto.pic-time.com/-cherlynelizaprintshop/gallery">of your choosing.</a>
+	<span id="$300 Cherlyn print"></span>
         </div>
     </div>
     <div class="reward box">
