Add Molly's rewards

--- a/index.html
+++ b/index.html
@@ -218,11 +218,12 @@
     </p>
 
     <div class="reward box">
-        <h3>$100: A 2024 calendar with beautiful landscape photos from Cherlyn</h3>
+        <h3>$100: A pie from Molly</h3>
         <div class=reward-content>
-            <img src="./imgs/cherlyn.jpg">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$100+Cherlyn's+calendar"><img src="./tball.gif">claim reward</a>
-            <span id="$100 Cherlyn's calendar"></span>
+            <img src="./imgs/molly.jpeg">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$100+Molly+pie"><img src="./tball.gif">claim reward</a>
+            <p>Choose your flavor! (rhubarb custard, rhubarb, mixed berry, peach-- all but custard can be vegan)</p>
+            <span id="$100 Molly pie"></span>
         </div>
     </div>
     <div class="reward box">
@@ -269,12 +270,11 @@
         </div>
     </div>
     <div class="reward box">
-        <h3>$200: A watercolor bird painting from Cassidy</h3>
+        <h3>$200: Homemade dehydrated backpacking meals from Molly</h3>
         <div class=reward-content>
-            <img src="./imgs/cassidy3.jpeg">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Cassidy+bird+painting"><img src="./tball.gif">claim reward</a>
-            <p>A painting of a bird of YOUR choice, delivered to your (Seattle) home</p>
-            <span id="$200 Cassidy bird painting"></span>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$200+Molly+meals"><img src="./tball.gif">claim reward</a>
+            <p>5 servings of a custom backpacking meal suited to your preferences/dietary needs</p>
+            <span id="$200 Molly meals"></span>
         </div>
     </div>
     <div class="reward box">
@@ -347,7 +347,7 @@
             <img src="./imgs/jackie1.jpg">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc1S5IvQkBVmzb0In9OLMNYoL0EibJ2mUObqKo5RlrD5UFs0A/viewform?usp=pp_url&entry.513342160=$500+Jackie+climbing"><img src="./tball.gif">claim reward</a>
             <p><a href="https://www.instagram.com/jackie_be_/">Jackie</a> will take you on an entry-level sport or trad climbing session at the Exits- 6hrs</p>
-		<span id="$500 Jackie Climbing"></span>
+		<span id="$500 Jackie climbing"></span>
         </div>
     </div>
     <div class="reward box">
