Update progress bar style

--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
             background-color: white;
             border-radius: 1ex;
             width: 350px;
-            padding: 1ex;
         }
         #bar-inner {
             background-color: red;
             border-radius: 1ex;
             width: 315px;
+	    display: flex;
+	    justify-content: flex-end;
         }
         .reward {
             margin-bottom: 5px;
@@ -146,7 +147,7 @@
         <div style="display: flex; flex-direction: row">
             <div id=bar-outer class=bar-part>
                 <div style="display: flex; flex-direction: row">
-                    <div id=bar-inner class=bar-part></div><div class=bar-part>$31,588</div>
+                    <div id=bar-inner class=bar-part><div class=bar-part>$31,588</div></div>
                 </div>
             </div>$35,000
         </div>
